--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # Runs at 12am IST
     # - cron: '30 18 * * *
-    - cron: '* * * * *'
+    - cron: '*/2 * * * *'
 
 jobs:
   update-readme:
