--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,13 @@
 name: Waka Readme
 
 on:
+  push: 
+    branches: 
+      - master
   schedule:
     # Runs at 12am IST
     # - cron: '30 18 * * *
-    - cron: * * * * *
+    - cron: '* * * * *'
 
 jobs:
   update-readme:
