--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   schedule:
     # Runs at 12am IST
     - cron: '30 18 * * *'
-    
+
 jobs:
   update-readme:
     name: Update Readme with Metrics
@@ -25,3 +25,5 @@ jobs:
           SHOW_LANGUAGE_PER_REPO: False
           SHOW_SHORT_INFO: False
           SHOW_LOC_CHART: False
+          SHOW_LINES_OF_CODE: True
+          SHOW_PROFILE_VIEWS: False
