--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
 name: Waka Readme
 
 on:
-#   push: 
-#     branches: 
-#       - master
-#   schedule:
-#     # Runs at 12am IST
-#     - cron: '30 18 * * *'
+  push: 
+    branches: 
+      - master
+  schedule:
+    # Runs at 12am IST
+    - cron: '30 18 * * *'
 
 jobs:
   update-readme:
